pref: improve performance of shiki (#9)